syntax = "proto3";

option csharp_namespace = "Shared.Content.Protos";

package content;

service ContentService {
  rpc ListContent (ListContentRequest) returns (ListContentResponse);
  rpc CreateContent (CreateContentRequest) returns (CreateContentResponse);
  rpc GenerateFromTemplate (GenerateRequest) returns (GenerateResponse);
}

message ContentItem {
  string id = 1;
  string user_id = 2;
  string content_body = 3;
  string created_at = 4;
}

message ListContentRequest {
  string user_id = 1; // Optional filter by user
}

message ListContentResponse {
  repeated ContentItem items = 1;
}

message CreateContentRequest {
  string user_id = 1;
  string content_body = 2;
}

message CreateContentResponse {
  ContentItem item = 1;
}

message GenerateRequest {
  string template_id = 1;
  string schema = 2;
  string path = 3;
}

message GenerateResponse {
  string message = 1;
  string template_id = 2;
  string schema = 3;
  string path = 4;
}